Implement API action=mwversioninfo
Needs tests, better error handling, documentation, etc. But it's
functional.

Change-Id: Ie36a3fea7edc13065e667c2ea9bcd93967412572

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,5 +5,8 @@
 		]
 	},
 	"mwversioninfo-desc": "Manage MediaWiki version information",
-	"mwversioninfo.json": "{\"releases\": [], \"beta\": null}"
+	"mwversioninfo.json": "{\"releases\": [], \"beta\": null}",
+	"apihelp-mwversioninfo-summary": "Gets version information about MediaWiki branches",
+	"apihelp-mwversioninfo-param-version": "MediaWiki version",
+	"apihelp-mwversioninfo-example": "Gets information about MediaWiki 1.27"
 }
