--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -5,5 +5,8 @@
 		]
 	},
 	"mwversioninfo-desc": "{{desc|name=MWVersionInfo|url=https://www.mediawiki.org/wiki/Extension:MWVersionInfo}}",
-	"mwversioninfo.json": "{{notranslate}}"
+	"mwversioninfo.json": "{{notranslate}}",
+	"apihelp-mwversioninfo-summary": "{{doc-apihelp-summary|mwversioninfo}}",
+	"apihelp-mwversioninfo-param-version": "{{doc-apihelp-param|mwversioninfo|version}}",
+	"apihelp-mwversioninfo-example": "{{doc-apihelp-example|mwversioninfo}}"
 }
